# sniffy

./: .gitignore  README.md  setup.cfg
src/: sniffy.py
src/controller/: pcapture.py  sniffy_server.py  utils.py
src/log/: log.py
src/model/: sniffer.py
tests/: capture_tests.py  json_tests.py  restore_resources.bat
tests/backup-resources/: sniffers_04.json
tests/resources/: sniffers_05.json
