[metadata]
name = sniffy-CAFLO
version = 0.0.1
author = Carlo Cannarsa
author_email = carlo.cannarsa@gmail.com
description = Network sniffer manager 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Caflo/sniffy
# project_urls =
#    Docs = https://github.com/pypa/sampleproject/issues @TODO
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src